add lesson without auth
